--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -9,7 +9,9 @@ permissions:
   pull-requests: write
 
 jobs:
-  CI-Testing:
+  first-job:
+    name: CI(Testing)
+
     runs-on: ubuntu-latest
 
     steps:
