feat: Add Service for Google Oauth2

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,9 @@
+auth:
+  google:
+    client_id: ${GOOGLE_OAUTH_CLIENT_ID}
+  jwt:
+    secret: ${JWT_SECRET}
+
 springdoc:
   packages-to-scan: com.skhu.mypack
   default-consumes-media-type: application/json;charset=UTF-8
