--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,12 @@ auth:
   jwt:
     secret: ${JWT_SECRET}
 
+spring:
+  data:
+    redis:
+      host: ${REDIS_HOST}
+      port: ${REDIS_PORT}
+
 springdoc:
   packages-to-scan: com.skhu.mypack
   default-consumes-media-type: application/json;charset=UTF-8
